rabbitmq/rabbitmq-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-ui-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: rabbitmq-cluster
  ports:
    - name: http
      protocol: TCP
      port: 15672
      targetPort: 15672
      nodePort: 31672  # You can pick any port in the 30000-32767 range
